// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdHocToolsPanelTest adhoc panel matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="main-section adHocToolsPanel"
  >
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-link
        classname="link"
        id="back-to-launchpad-link"
      >
        <i
          aria-hidden="true"
          class="backToLaunchPadIcon root-105"
          data-icon-name="back"
        />
        Back to launch pad
      </mock-link>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdHocToolsPanelTest adhoc panel with needs review sixth toggle matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="main-section adHocToolsPanel"
  >
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
      <span
        class="divider"
      />
      <div>
        sixth
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-link
        classname="link"
        id="back-to-launchpad-link"
      >
        <i
          aria-hidden="true"
          class="backToLaunchPadIcon root-105"
          data-icon-name="back"
        />
        Back to launch pad
      </mock-link>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdHocToolsPanelTest adhoc tools panel with accessible names feature 1`] = `
<DocumentFragment>
  <div
    class="main-section adHocToolsPanel"
  >
    <main
      class="adHocToolsGrid"
    >
      <div>
        first
      </div>
      <span
        class="divider"
      />
      <div>
        second
      </div>
      <span
        class="divider"
      />
      <div>
        third
      </div>
      <span
        class="divider"
      />
      <div>
        fourth
      </div>
      <div>
        fifth
      </div>
      <span
        class="divider"
      />
      <div>
        sixth
      </div>
      <span
        class="divider"
      />
      <div>
        seventh
      </div>
    </main>
    <div
      class="adHocToolsPanelFooter"
      role="navigation"
    >
      <mock-link
        classname="link"
        id="back-to-launchpad-link"
      >
        <i
          aria-hidden="true"
          class="backToLaunchPadIcon root-105"
          data-icon-name="back"
        />
        Back to launch pad
      </mock-link>
    </div>
  </div>
</DocumentFragment>
`;
